# rpg_vikit

vikit_common/: CMakeLists.txt
vikit_ros/: CMakeLists.txt  package.xml
vikit_ros/include/vikit/: camera_loader.h  output_helper.h  params_helper.h
vikit_ros/src/: output_helper.cpp
