<?xml version="1.0"?>
<package format="3">
  <name>vikit_ros2</name>
  <version>0.0.1</version>
  <description>The vikit_ros package for ROS 2</description>

  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>Eigen3</depend> 
  <depend>geometry_msgs</depend>
  <depend>OpenCV</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
